Dropped the gc.log re-ingestion from the Generator run log (gh #891)
LogReporter appended lines 2..n-2 of a file literally named gc.log in
the working directory to every run log written under -l. That presumed
the JDK 8 -Xloggc:gc.log format, which JDK 9+ no longer produces
(-Xlog:gc:file=... writes a different layout), so on the supported JDK
the branch was dead at best and, given a stale gc.log lying around,
silently polluted the run log at worst.