@@ -21,6 +21,9 @@ Upcoming release
   `io.FileType`, `io.FileUtils` and `io.ExtensionFilter` → `util.io`,
   `explore.ExploreResult` and `explore.util.LTSLabels` → `lts`,
   `transform.Proof` → `match`, and `explore.Verbosity` → `util.cli`
+- The Generator's `-l` run log no longer appends the contents of a `gc.log` file
+  found in the working directory (a remnant of the JDK 8 `-Xloggc` era); use
+  `-Xlog:gc:file=...` to record garbage collection separately
 
 Release 7.5.3, 3 March 2026
 -------------------------------
